[package]
name = "monitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.218", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.139"
